# tulip_api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: test.py
src/tulip_api/: __init__.py
src/tulip_api/api/: app.py
src/tulip_api/config/: settings.py
src/tulip_api/models/: embeddings.py
tests/: test_api.py
